Update to version 1.0.1

--- a/system/cms/themes/default/views/partials/metadata.html
+++ b/system/cms/themes/default/views/partials/metadata.html
@@ -11,4 +11,9 @@
     {{ theme:js file="bootstrap.js" }}
     {{ theme:js file="modern-business.js" }}
     
+    <!--[if lt IE 7 ]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+    <![endif]-->
+        
     {{ template:metadata }}
