--- a/system/cms/themes/metrocms/css/theme-fabrics.css
+++ b/system/cms/themes/metrocms/css/theme-fabrics.css
@@ -16,7 +16,7 @@ body {
 	color:#fff !important;
 }
 .left-secondary-nav, .left-nav {
-	background:#4d4d4d url(../img/low_contrast_linen_@2X.png) repeat !important;
+	background:#4d4d4d url('../img/low_contrast_linen_@2X.png') repeat !important;
 }
 .left-primary-nav ul li.active a {
 	background:#121e25 !important;
@@ -26,7 +26,7 @@ body {
 	background: #060 !important;
 }
 .main-wrapper {
-	background: #eee url(../img/fabric_plaid_@2X.png) repeat !important;
+	background: #eee url('../img/fabric_plaid_@2X.png') repeat !important;
 }
 .navbar .nav > li > .dropdown-menu:after {
 	border-bottom: 6px solid #333 !important;
@@ -100,7 +100,7 @@ body {
 	border: 1px solid #ccc;
 }
 .switch-board {
-	background:#4d4d4d url(../img/low_contrast_linen_@2X.png) repeat !important;
+	background:#4d4d4d url('../img/low_contrast_linen_@2X.png') repeat !important;
 }
 .form-signin {
 	border: 2px solid #000;
