--- a/system/cms/modules/widgets/css/widgets.css
+++ b/system/cms/modules/widgets/css/widgets.css
@@ -327,7 +327,7 @@ li.empty-drop-item.loading {
 
 .box-container header h3 {
 	font-size: 16px;
-	line-height: 16px
+	line-height: 16px;
 	padding: 0!important;
 	margin: 0!important;
 }
