Updated Files library

--- a/system/cms/themes/default/views/partials/breadcrumbs.html
+++ b/system/cms/themes/default/views/partials/breadcrumbs.html
@@ -1,3 +1,5 @@
 {{ if template:has_breadcrumbs }}
-    <ol class="breadcrumb"><li>{{ url:anchor segments='home' title='Home' }}</li>{{ template:breadcrumbs }}{{ if uri }}<li>{{ url:anchor segments=uri title=name }}</li>{{ else }}<li class="active"><span class="current">{{ name }}</span></li>{{ endif }}{{ /template:breadcrumbs }}</ol>
+	{{ if theme:options:show_breadcrumbs == 'yes' }}
+	    <ol class="breadcrumb"><li>{{ url:anchor segments='home' title='Home' }}</li>{{ template:breadcrumbs }}{{ if uri }}<li>{{ url:anchor segments=uri title=name }}</li>{{ else }}<li class="active"><span class="current">{{ name }}</span></li>{{ endif }}{{ /template:breadcrumbs }}</ol>
+	{{ endif }}
 {{ endif }}
